# GreenWatch

./: README.md  RUNNER_CONTRACT.md  package.json  pnpm-lock.yaml
NativeRunner/: CMakeLists.txt
Other BE/: .gitignore  README.md
Other BE/NativeRunner/: CMakeLists.txt
Other BE/NativeRunner/src/: llm_engine.h  llm_engine_executorch.cpp  llm_engine_executorch.h  llm_engine_http.h  llm_engine_stub.h  main.cpp
Other BE/bridge/: vector_db_bridge.py
Other BE/bridge_docker/app/: Dockerfile  bridge_http.py
Other BE/web_test/: index.html
app/: globals.css  layout.tsx  page.tsx
app/greenwatch/: page.tsx
brains/: API_CONTRACT.md  LOG_FIELDS.md  index.html
brains/src/app/: main.js  orchestrator.js  testLogEngine.js
brains/src/log/: logEngine.js
brains/src/log/schema/: engineeringSchema.js
brains/src/storage/: logStorage.js
brains/src/types/: models.js
components/: chat-input.tsx  chat-message.tsx  typing-indicator.tsx
components/greenwatch/: document-upload.tsx  free-chat.tsx  greenwatch-container.tsx  greenwatch-header.tsx  question-flow.tsx
components/landing/: features-section.tsx  footer.tsx  hero-section.tsx  navbar.tsx
lib/: api.ts
src/adapters/: runnerClient.js
src/conversation/: engine.js
types/: speech-recognition.d.ts
